--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -1,8 +1,7 @@
 <!doctype html>
-<html>
+<html lang="{{ .LanguageCode}}">
 	<head>
 
-		<html lang="en-US">
 		<title>{{ .Title }} | Kaldi</title>
 		<link rel="stylesheet" href="/css/main.css"/>
 
